--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mysql2": "^3.2.4",
     "next": "13.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
